# RoomMates

./: .dockerignore  .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  README.md  package-lock.json  package.json  pico.save
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/db_init/: 01-databases.sql
.devcontainer/keycloak/: realm-export.json
.github/actions/toolchain/: action.yml
.github/workflows/: build-container.yml  pull-request-checks.yml  rust.yml
entrypoints/: post_create_command.sh
scripts/: bundle_android.sh  dioxusfmt.sh  format.sh
