[workspace]
resolver = "2"
members = ["packages/frontend", "packages/api", "packages/entity", "packages/form_hooks/frontend_derive", "packages/form_hooks"]

[workspace.dependencies]
dioxus = { version = "0.7.2" }
sea-orm = { version = "2.0.0-rc" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
anyhow = { version = "1.0.71" }
regex = "1.12.2"
chrono = { version = "0.4.43", features = ["serde", "wasmbind"] }

# workspace
api = { path = "packages/api" }
entity = { path = "packages/entity" }
frontend_derive = { path = "packages/form_hooks/frontend_derive" }
form_hooks = { path = "packages/form_hooks" }
