[workspace]
resolver = "2"
members = ["packages/frontend", "packages/api", "packages/entity", "packages/form_hooks/form_hooks_derive", "packages/form_hooks"]

[workspace.dependencies]
dioxus = { version = "0.7.3" }
sea-orm = { version = "2.0.0-rc"}
serde = { version = "1.0.228" }
serde_json = { version = "1.0.145" }
anyhow = { version = "1.0.71" }
regex = "1.12.2"
time = { version = "0.3.46", features = ["serde", "wasm-bindgen", "local-offset"] }


# workspace
api = { path = "packages/api" }
entity = { path = "packages/entity" }
form_hooks_derive = { path = "packages/form_hooks/form_hooks_derive" }
form_hooks = { path = "packages/form_hooks" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = false
